--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
     <header class="main-header">
       <div class="container clearfix">
         <div class="index-logo">
-          <img src="img/nerds-logo.png" width="160" height="65" alt="NЁRDS DESIGN STUDIO">
+          <a href="#">
+            <img src="img/nerds-logo.png" width="160" height="65" alt="NЁRDS DESIGN STUDIO">
+          </a>
         </div>
         <nav class="main-navigation">
           <ul>
@@ -22,7 +24,7 @@
               <a href="#">Клиенты</a>
             </li>
             <li>
-              <a href="#">Магазин</a>
+              <a href="catalog.html">Магазин</a>
             </li>
             <li>
               <a href="#">Контакты</a>
