Верстка личного проекта

--- a/index.html
+++ b/index.html
@@ -199,9 +199,9 @@
           <span>Ваш e-mail</span>
           <input type="text" name="text" placeholder="Для отправки ответа" id="write-mail">
         </label>
-        <label for="write-text">
+        <label for="write-text" class="write-text">
           <span>Текст письма</span>
-          <input type="text" name="post" placeholder="В свободной форме" id="write-text">
+          <textarea type="text" name="post" placeholder="В свободной форме" id="write-text"></textarea>
         </label>
         <button class="send-mail" tipe="submit">Отправить</button>
       </form>
