--- a/catalog.html
+++ b/catalog.html
@@ -282,8 +282,8 @@
           <div class="adress">
             <h3>NЁRDS DESIGN STUDIO</h3>
             <p>191186, Санкт-Петербург,<br>
-              ул. Б. Конюшенная, д. 19/8<br>
-              тел. +7 (812) 275-75-75</p>
+              ул. Б. Конюшенная, д. 19/8<br></p>
+              <span class="tel">тел. +7 (812) 275-75-75</span>
             <a class="button" href="#">Напишите нам</a>
           </div>
           <div class="marker">
@@ -317,9 +317,9 @@
           <span>Ваш e-mail</span>
           <input type="text" name="text" placeholder="Для отправки ответа" id="write-mail">
         </label>
-        <label for="write-text">
+        <label for="write-text" class="write-text">
           <span>Текст письма</span>
-          <input type="text" name="post" placeholder="В свободной форме" id="write-text">
+          <textarea type="text" name="post" placeholder="В свободной форме" id="write-text"></textarea>
         </label>
         <button class="send-mail" tipe="submit">Отправить</button>
       </form>
