--- a/index.html
+++ b/index.html
@@ -158,8 +158,7 @@
     </main>
     <footer class="main-footer clearfix">
       <div class="map clearfix">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1969.312323487249!2d30.320988978160425!3d59.93902966532363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1486316012099" width="100%" height="416" frameborder="0" style="border:0" allowfullscreen></iframe>
-        <!--<img src="img/map.jpg" width="1440" height="416" alt="Map">-->
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1969.312323487249!2d30.3209889781…ru!2sru!4v1486316012099" height="416" frameborder="0" style="border:0;width:100%" allowfullscreen>
         <div class="map-markers">
           <div class="adress">
             <h3>NЁRDS DESIGN STUDIO</h3>
@@ -201,9 +200,9 @@
         </label>
         <label for="write-text" class="write-text">
           <span>Текст письма</span>
-          <textarea type="text" name="post" placeholder="В свободной форме" id="write-text"></textarea>
+          <textarea name="post" placeholder="В свободной форме" id="write-text"></textarea>
         </label>
-        <button class="send-mail" tipe="submit">Отправить</button>
+        <button class="send-mail" type="submit">Отправить</button>
       </form>
     </div>
   </body>
