Верстка личного проекта

--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
     </main>
     <footer class="main-footer clearfix">
       <div class="map clearfix">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d1969.312323487249!2d30.320988978160425!3d59.93902966532363!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sru!2sru!4v1486316012099" width="100%" height="416" frameborder="0" style="border:0" allowfullscreen></iframe>
+        <img src="img/map.jpg" width="1440" height="416" alt="Map" class="map-img">
         <div class="map-markers">
           <div class="adress">
             <h3>NЁRDS DESIGN STUDIO</h3>
@@ -170,7 +170,7 @@
           <div class="marker">
             <img src="img/map-marker.png" width="231" height="190" alt="Map-marker">
           </div>
-      </div>
+        </div>
       </div>
       <div class="social container clearfix">
         <section class="footer-social">
